--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,40 +62,53 @@
 
        </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
 
-            <TextView
-                android:text="过滤："
-                android:textColor="#FF333333"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+           <LinearLayout
+               android:layout_marginLeft="6dp"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
 
-            <CheckBox
-                android:id="@+id/hongkong"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="港台"
-                android:textColor="#FF333333"/>
+               <TextView
+                   android:text="过滤："
+                   android:textColor="#FF333333"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
 
-            <CheckBox
-                android:id="@+id/japan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="日本"
-                android:textColor="#FF333333"/>
+               <CheckBox
+                   android:id="@+id/hongkong"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="港台"
+                   android:textColor="#FF333333"/>
 
-            <CheckBox
-                android:id="@+id/usa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="美国"
-                android:textColor="#FF333333"/>
-        </LinearLayout>
+               <CheckBox
+                   android:id="@+id/japan"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="日本"
+                   android:textColor="#FF333333"/>
+
+               <CheckBox
+                   android:id="@+id/usa"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="美国"
+                   android:textColor="#FF333333"/>
+           </LinearLayout>
+
+           <TextView
+               android:id="@+id/ifCheckIn"
+               android:layout_marginRight="6dp"
+               android:layout_alignParentEnd="true"
+               android:layout_centerVertical="true"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="未续命"/>
+       </RelativeLayout>
 
 
         <ListView
