--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,9 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".SettingActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:id="@+id/layout_host"
@@ -28,15 +43,17 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center"
-                android:hint="请输入网址" />
+                android:hint="请输入网址"
+                android:inputType="textUri"
+                android:singleLine="true" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout_email"
-            android:layout_below="@id/layout_host"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_host">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,15 +68,16 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center"
-                android:hint="请输入邮箱" />
+                android:hint="请输入邮箱"
+                android:singleLine="true" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout_pass"
-            android:layout_below="@id/layout_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_email">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -75,14 +93,15 @@
                 android:layout_weight="9"
                 android:gravity="center"
                 android:hint="请输入密码"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:singleLine="true" />
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_below="@id/layout_pass"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_pass">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -99,6 +118,7 @@
                 android:gravity="center"
                 android:hint="报警基准"
                 android:inputType="number"
+                android:singleLine="true"
                 android:text="20" />
         </LinearLayout>
     </RelativeLayout>
