--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,38 +13,39 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:background="@color/colorPrimary"
             android:id="@+id/layout_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
+            android:paddingLeft="6dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="过滤："
-                android:textColor="#FF333333" />
+                android:textColor="#ffffff" />
 
             <CheckBox
                 android:id="@+id/hongkong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="港台"
-                android:textColor="#FF333333" />
+                android:textColor="#ffffff" />
 
             <CheckBox
                 android:id="@+id/japan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="日本"
-                android:textColor="#FF333333" />
+                android:textColor="#ffffff" />
 
             <CheckBox
                 android:id="@+id/usa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="美国"
-                android:textColor="#FF333333" />
+                android:textColor="#ffffff" />
         </LinearLayout>
 
         <ListView
